Start the HomePage

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: meteor-application-template-react
-description: A template for quickly starting Meteor application development
+title: CableTrack PRO
+description: A tool for electricians to track their cable runs.
 google_analytics:
 show_downloads: true
 theme: jekyll-theme-cayman
