--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: CableTrack PRO
 description: A tool for electricians to track their cable runs.
 google_analytics:
 show_downloads: true
-theme: jekyll-theme-cayman
+theme: jekyll-theme-architect
 
 gems:
   - jekyll-mentions
