--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -9,5 +9,11 @@
     { "name": "Bicycle", "quantity": 2, "owner": "john@foo.com", "condition": "poor" },
     { "name": "Banana", "quantity": 2, "owner": "admin@foo.com", "condition": "good" },
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
+  ],
+
+  "defaultCables": [
+    { "description": "Cable 1", "owner": "john@foo.com" },
+    { "description": "Cable 2", "owner": "john@foo.com" },
+    { "description": "Cable 3", "owner": "admin@foo.com" }
   ]
 }
