--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -8,7 +8,7 @@
     {
       "email": "john@foo.com",
       "password": "changeme",
-      "role": "CompanyOwner,ProjectOwner,Electrician"
+      "role": "CompanyOwner"
     }
   ],
   "defaultProjects": [
