updated project schema

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -21,11 +21,13 @@
       "jobPhone": "123-456-7890",
       "jobFax": "123-456-7891",
       "mailAddress": "123 Main St",
+      "mailAddress2": "Suite 100",
       "mailCity": "Cityville",
       "mailState": "CA",
       "mailZip": "12345",
       "mailCountry": "US",
       "shipAddress": "456 Shipping St",
+      "shipAddress2": "Suite 200",
       "shipCity": "Shipcity",
       "shipState": "NY",
       "shipZip": "54321",
