--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,22 +1,110 @@
 {
   "defaultAccounts": [
-    { "username": "admin@foo.com", "email": "admin@foo.com", "password": "changeme", "roles": ["GlobalAdmin"] },
-    { "username": "ceo@foo.com", "email": "ceo@foo.com", "password": "changeme", "roles": ["CompanyOwner"] },
-    { "username": "pm@foo.com", "email": "pm@foo.com", "password": "changeme", "roles": ["ProjectOwner"] },
-    { "username": "elec@foo.com", "email": "elec@foo.com", "password": "changeme", "roles": ["Electrician"] }
+    {
+      "username": "admin@foo.com",
+      "email": "admin@foo.com",
+      "password": "changeme",
+      "roles": [
+        "GlobalAdmin"
+      ]
+    },
+    {
+      "username": "ceo@foo.com",
+      "email": "ceo@foo.com",
+      "password": "changeme",
+      "roles": [
+        "CompanyOwner"
+      ]
+    },
+    {
+      "username": "pm@foo.com",
+      "email": "pm@foo.com",
+      "password": "changeme",
+      "roles": [
+        "ProjectOwner"
+      ]
+    },
+    {
+      "username": "elec@foo.com",
+      "email": "elec@foo.com",
+      "password": "changeme",
+      "roles": [
+        "Electrician"
+      ]
+    }
   ],
-
   "defaultCompanies": [
-    { "name": "Foo Company", "ownerNames": ["ceo@foo.com"], "owners": [] }
+    {
+      "name": "Foo Company",
+      "ownerNames": [
+        "ceo@foo.com"
+      ],
+      "owners": []
+    }
   ],
-
   "defaultProjects": [
-    { "company": "Foo Company", "code": "TEST", "name": "Foo Project", "ownerNames": ["ceo@foo.com", "pm@foo.com"], "owners": [] }
+    {
+      "company": "Foo Company",
+      "code": "TEST",
+      "name": "Foo Project",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "owners": []
+    }
   ],
-
-    "defaultCables": [
-      { "company": "Foo Company", "project": "Foo Project", "name": "Cable 1", "ownerNames": ["ceo@foo.com", "pm@foo.com"], "owners": [] },
-      { "company": "Foo Company", "project": "Foo Project", "name": "Cable 2", "ownerNames": ["ceo@foo.com", "pm@foo.com"], "owners": [] },
-      { "company": "Foo Company", "project": "Foo Project", "name": "Cable 3", "ownerNames": ["ceo@foo.com", "pm@foo.com"], "owners": [] }
-    ]
+  "defaultCables": [
+    {
+      "company": "Foo Company",
+      "project": "Foo Project",
+      "name": "Cable 1",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "owners": []
+    },
+    {
+      "company": "Foo Company",
+      "project": "Foo Project",
+      "name": "Cable 2",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "owners": []
+    },
+    {
+      "company": "Foo Company",
+      "project": "Foo Project",
+      "name": "Cable 3",
+      "ownerNames": [
+        "ceo@foo.com",
+        "pm@foo.com"
+      ],
+      "owners": []
+    }
+  ],
+  "defaultCablePullIns": [
+    {
+      "company": "Foo Company",
+      "project": "Foo Project",
+      "cable": "Cable 1",
+      "installerName": "elec@foo.com",
+      "lengthInstalled": 120,
+      "pulledHand": true
+    },
+    {
+      "company": "Foo Company",
+      "project": "Foo Project",
+      "cable": "Cable 2",
+      "installerName": "elec@foo.com",
+      "lengthInstalled": 100,
+      "pulledHand": false,
+      "tugger": "Tugger 1",
+      "calibrationId": "XYZ3425",
+      "maxPullingTension": 10.5
+    }
+  ]
 }
