--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meteor-application-template-react",
+  "name": "cabletrack-pro",
   "private": true,
   "dependencies": {
     "@babel/runtime": "^7.22.6",
