Setting up Navigation

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -31,27 +31,6 @@
       "roles": [
         "Electrician"
       ]
-    },
-    {
-      "username": "misha",
-      "email": "mikhail@gmail.com",
-      "password": "password",
-      "firstName": "Mikhail",
-      "lastName": "Shkaralevich",
-      "address": {
-        "address": "Fake Street 123",
-        "address2": "N/A",
-        "city": "Honolulu",
-        "state": "HI",
-        "zip": "96782",
-        "country": "US"
-      },
-      "phone": "808-808-8080",
-      "fax": "",
-      "picture": "https://avatars.githubusercontent.com/u/76892413?v=4",
-      "roles": [
-        "GlobalAdmin"
-      ]
     }
   ],
   "defaultCompanies": [
@@ -60,6 +39,18 @@
       "ownerNames": [
         "ceo@foo.com",
         "admin@foo.com"
+      ],
+      "address": {
+        "address": "123 Main St",
+        "city": "Cityville",
+        "state": "CA",
+        "zip": "12345",
+        "country": "US"
+      },
+      "userNames": [
+        "ceo@foo.com",
+        "pm@foo.com",
+        "elec@foo.com"
       ]
     }
   ],
@@ -72,7 +63,6 @@
       "bidNumber": "BID456",
       "mailAddress": {
         "address": "123 Main St",
-        "address2": "123 Main St",
         "city": "Cityville",
         "state": "CA",
         "zip": "12345",
@@ -80,7 +70,6 @@
       },
       "shipAddress": {
         "address": "456 Shipping St",
-        "address2": "456 Shipping St",
         "city": "Shippingtown",
         "state": "CA",
         "zip": "54321",
