--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,9 @@
     "lint": "eslint --quiet --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "lint-fix": "eslint --quiet --fix --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "testcafe": "testcafe chrome tests/*.testcafe.js",
+    "testcafe-companies": "testcafe chrome tests/company.testcafe.js",
+    "testcafe-projects": "testcafe chrome tests/project.testcafe.js",
+    "testcafe-cables": "testcafe chrome tests/cable.testcafe.js",
     "testcafe-single": "testcafe chrome tests/*.testcafe.js -t \"Test that signin and signout work\"",
     "testcafe-ci": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\"",
     "test-all": "meteor reset && meteor npm run lint && meteor npm run unimported && meteor npm run testcafe-ci",
