Trying to get PullIn TestCafe to work

--- a/app/package.json
+++ b/app/package.json
@@ -40,11 +40,17 @@
     "start": "meteor --no-release-check --exclude-archs web.browser.legacy,web.cordova --settings ../config/settings.development.json",
     "lint": "eslint --quiet --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "lint-fix": "eslint --quiet --fix --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
-    "testcafe": "testcafe --stop-on-first-fail chrome tests/*.testcafe.js",
+    "testcafe": "testcafe chrome tests/*.testcafe.js",
     "testcafe-companies": "testcafe chrome tests/company.testcafe.js",
     "testcafe-projects": "testcafe chrome tests/project.testcafe.js",
     "testcafe-cables": "testcafe chrome tests/cable.testcafe.js",
     "testcafe-cablepullins": "testcafe chrome tests/cablepullin.testcafe.js",
+    "testcafe-users": "testcafe chrome tests/user.testcafe.js",
+    "testcafe-companies-debug": "testcafe chrome tests/company.testcafe.js --debug-mode",
+    "testcafe-projects-debug": "testcafe chrome tests/project.testcafe.js --debug-mode",
+    "testcafe-cables-debug": "testcafe chrome tests/cable.testcafe.js --debug-mode",
+    "testcafe-cablepullins-debug": "testcafe chrome tests/cablepullin.testcafe.js --debug-mode",
+    "testcafe-users-debug": "testcafe chrome tests/user.testcafe.js --debug-mode",
     "testcafe-single": "testcafe chrome tests/*.testcafe.js -t \"Test that signin and signout work\"",
     "testcafe-ci": "testcafe chrome:headless tests/*.testcafe.js -q --app \"meteor npm run start\"",
     "test-all": "meteor reset && meteor npm run lint && meteor npm run unimported && meteor npm run testcafe-ci",
