Added Ids, added a testcafe-users, 2/4 tests work

--- a/app/package.json
+++ b/app/package.json
@@ -41,6 +41,7 @@
     "lint": "eslint --quiet --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "lint-fix": "eslint --quiet --fix --ext .jsx --ext .js ./imports && eslint --quiet --ext .js ./tests",
     "testcafe": "testcafe --stop-on-first-fail chrome tests/*.testcafe.js",
+    "testcafe-users": "testcafe chrome tests/user.testcafe.js",
     "testcafe-companies": "testcafe chrome tests/company.testcafe.js",
     "testcafe-projects": "testcafe chrome tests/project.testcafe.js",
     "testcafe-cables": "testcafe chrome tests/cable.testcafe.js",
